@@ -9,7 +9,7 @@ module ApiTester
         endpoint.methods.each do |method|
           cases = method.request.cases
           cases.each do |format_case|
-            response = endpoint.call method: method, payload: format_case.payload, headers: format_case.headers
+            response = endpoint.call base_url: contract.base_url, method: method, payload: format_case.payload, headers: format_case.headers
             test = FormatTest.new response, format_case.payload, endpoint.bad_request_response, endpoint.url, method.verb
             reports.concat test.check
           end
