@@ -9,7 +9,7 @@ module ApiTester
       contract.endpoints.each do |endpoint|
         endpoint.methods.each do |method|
           default_case = BoundaryCase.new endpoint.url, method.request.default_payload, method.request.default_headers
-          response = endpoint.call method: method, payload: default_case.payload, headers: default_case.headers
+          response = endpoint.call base_url: contract.base_url, method: method, payload: default_case.payload, headers: default_case.headers
           test = GoodCaseTest.new response, endpoint.url, method
           reports.concat test.check
         end
