@@ -8,19 +8,19 @@ module ApiTester
 
       contract.endpoints.each do |endpoint|
         allowances(endpoint).each do |verbs|
-            reports.concat check_typo_url(endpoint)
+            reports.concat check_typo_url(contract.base_url, endpoint)
         end
       end
 
       reports
     end
 
-    def self.check_typo_url endpoint
+    def self.check_typo_url base_url, endpoint
       bad_url = "#{endpoint.url}gibberishadsfasdf"
       bad_endpoint = ApiTester::Endpoint.new "Bad URL", bad_url
       typo_case = BoundaryCase.new("Typo URL check", {}, {})
       method = ApiTester::Method.new ApiTester::SupportedVerbs::GET, ApiTester::Response.new(200), ApiTester::Request.new
-      response = bad_endpoint.call method: method, payload: typo_case.payload, headers: typo_case.headers
+      response = bad_endpoint.call base_url: base_url, method: method, payload: typo_case.payload, headers: typo_case.headers
 
       test = TypoClass.new response, typo_case.payload, endpoint.not_found_response, bad_url, ApiTester::SupportedVerbs::GET
       test.check
