@@ -3,11 +3,10 @@ require 'api-tester/modules/extra_verbs'
 describe ApiTester::ExtraVerbs do
   let(:url) {"www.example.com"}
   let(:bad_url) {"#{url}gibberishadsfasdf"}
-  let(:endpoint) {ApiTester::Endpoint.new "Test", url}
-  let(:contract) {ApiTester::Contract.new "Test"}
+  let(:endpoint) {ApiTester::Endpoint.new "Test", ""}
+  let(:contract) {ApiTester::Contract.new "Test", url}
   let(:not_found) {ApiTester::Response.new 404}
   let(:not_allow) {ApiTester::Response.new 415}
-  let(:contract) {ApiTester::Contract.new "Test"}
   let(:report) {ApiTester::ApiReport.new}
 
   before :each do
