@@ -11,8 +11,8 @@ require 'api-tester/test_helper'
 describe ApiTester::Format do
   let(:url) {"www.example.com"}
   let(:request) { ApiTester::Request.new }
-  let(:endpoint) {ApiTester::Endpoint.new "Test", url}
-  let(:contract) {ApiTester::Contract.new "Test"}
+  let(:endpoint) {ApiTester::Endpoint.new "Test", ""}
+  let(:contract) {ApiTester::Contract.new "Test", url}
   let(:expected_code) {400}
   let(:expected_response) {ApiTester::Response.new expected_code}
   let(:expected_body) {'{"numKey": 1, "string_key": "string"}'}
