@@ -10,8 +10,8 @@ require 'api-tester/util/supported_verbs'
 describe ApiTester::Typo do
   let(:url) {"www.example.com"}
   let(:bad_url) {"#{url}gibberishadsfasdf"}
-  let(:endpoint) {ApiTester::Endpoint.new "Test", url}
-  let(:contract) {ApiTester::Contract.new "Test"}
+  let(:endpoint) {ApiTester::Endpoint.new "Test", ""}
+  let(:contract) {ApiTester::Contract.new "Test", url}
   let(:not_found) {ApiTester::Response.new 404}
   let(:not_allow) {ApiTester::Response.new 415}
 
